.stack-work/logs/pango-0.13.0.0.log
[1 of 3] Compiling SetupWrapper     ( SetupWrapper.hs, /private/var/folders/lm/pw3z3cgx6zn2y748hl3hvgw40000gn/T/stack33509/pango-0.13.0.0/.stack-work/dist/x86_64-osx/Cabal-2.2.0.1/setup/SetupWrapper.o )

SetupWrapper.hs:60:49: error:
    Ambiguous occurrence ‘exeExtension’
    It could refer to either ‘Distribution.Simple.BuildPaths.exeExtension’,
                             imported from ‘Distribution.Simple.BuildPaths’ at SetupWrapper.hs:11:40-51
                          or ‘System.Directory.exeExtension’,
                             imported from ‘System.Directory’ at SetupWrapper.hs:23:1-23
   |
60 |     setupProgFile    = setupDir </> "setup" <.> exeExtension
   |                                                 ^^^^^^^^^^^^

SetupWrapper.hs:91:17: error:
    Ambiguous occurrence ‘die’
    It could refer to either ‘Distribution.Simple.Utils.die’,
                             imported from ‘Distribution.Simple.Utils’ at SetupWrapper.hs:8:1-32
                          or ‘System.Exit.die’,
                             imported from ‘System.Exit’ at SetupWrapper.hs:21:1-18
   |
91 |         []   -> die $ "The package requires Cabal library version "
   |                 ^^^
